--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -5,7 +5,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+html, div, span, applet, object, iframe,
 h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -52,24 +52,45 @@ table {
 /* End of CSS-Reset */
 
 @font-face {
-    font-family: handwritten;
-    src: url( 'Mawns_Handwriting.ttf' );
+    font-family: typewriter;
+    src: url( 'Albertsthal_Typewriter.ttf' );
 }
 body {
-    background: gray;
-    padding: 10px;
+    background: #DBDBD6;
+	background-image: url(10.jpg);
+    padding: 0px;
 }
 h1 {
-    font-family: handwritten;
-    font-size: 40px;
+	color: rgba(0, 0, 0, 0.6);
+    font-family: typewriter;
+    font-size: 50px;
     padding-left: 5px;
+    margin-bottom: 0;
 }
 #page {
-	background: #FFF;
 	margin: 20px auto 20px;
-	padding: 3px;
 	width: 497px;
-	box-shadow: 5px 5px 2px 1px #000;
+}
+.messageText p {
+	background: #FFF;
+	width: 100%;
+	margin-top: 7px;
+	padding: 3px;
+	box-shadow: 5px 5px 7px 1px #000;
+}
+.date {
+	text-align: right;
+}
+#board {
+	background: #FFF;
+	width: 100%;
+	margin-top: 7px;
+	padding: 3px;
+	box-shadow: 5px 5px 7px 1px #000;
+}
+#counter {
+	text-align: right;
+	font-family: typewriter;
 }
 textarea {
 	display: block;
@@ -78,6 +99,7 @@ textarea {
 	height: 250px;
 }
 input[type="submit"] {
+	font-family: typewriter;
 	margin-left: 425px;
 	width: 70px;
 }
