--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -71,15 +71,22 @@ h1 {
 	margin: 20px auto 20px;
 	width: 497px;
 }
-.messageText p {
+#messageArea p {
+	font-family: typewriter;
 	background: #FFF;
 	width: 100%;
 	margin-top: 7px;
 	padding: 3px;
 	box-shadow: 5px 5px 7px 1px #000;
 }
-.date {
+#messageArea p .date {
+	font-family: typewriter;
+	background: none;
+	margin-top: 0;
+	padding: 0;
+	box-shadow: none;
 	text-align: right;
+	font-size: small;
 }
 #board {
 	background: #FFF;
