--- a/3-gameon/memory/css/style.css
+++ b/3-gameon/memory/css/style.css
@@ -42,14 +42,15 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
-table {
+/*table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+}*/
 
 /* END OF CSS RESET! */
 
 #page {
     margin: 20px auto 20px;
-    width: 500px;
+    width: 250px;
+    height: 250px;
 }
