--- a/4-thequiz/css/style.css
+++ b/4-thequiz/css/style.css
@@ -8,8 +8,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
+dl, dt, dd, ol, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
@@ -84,4 +83,7 @@ h2 {
 }
 .right {
 	float:right;
+}
+ul {
+	list-style-type: circle;
 }
