--- a/4-thequiz/css/style.css
+++ b/4-thequiz/css/style.css
@@ -58,19 +58,10 @@ body {
 	background-image: url("purty_wood.png");
     padding: 0px;
 }
-#footer {
-	background-color: rgba(250,250,250,0.6);
-	position: absolute;
-	width: 100%;
-	bottom: 2px;
-}
-#footer img {
-	width: 50px;
-}
 h1 {
-	color: rgb(240,240,240);
+	color: black;
     font-family: Pacifico;
-    font-size: 25px;
+    font-size: 50px;
     padding-left: 5px;
     margin-bottom: 0;
 }
@@ -79,39 +70,13 @@ h1 {
 	margin: 20px auto 20px;
 	width: 350px;
 }
-.windowWrap {
-	background-color: white;
-	margin: 20px;
-	width: 450px;
-	height: 80%;
-	box-shadow: 5px 5px 7px 1px #000;
-}
-
-.windowHeadDiv {
-	text-align: center;
-	height: 30px;
-}
-.windowHeadDiv p{
-	padding-top: 15px;
-	display: inline;
-	font-size: 15px;
-	font-weight: bold;
-	font-style: none;
-}
-.windowHeadDiv img {
-	margin: -3px;
-}
-
 #page {
-	position: absolute;
-
-}
-#footer a img:hover {
-    transform: scale(1.25);
-    -webkit-transform: scale(1.25);
-    -moz-transform: scale(1.25);
-    position: relative;
-    z-index: 5;
+	background: #FFF;
+	width: 100%;
+	min-height: 105px;
+	margin-top: 7px;
+	padding: 3px;
+	box-shadow: 5px 5px 7px 1px #000;
 }
 h2 {
 	font-size: large;
@@ -121,36 +86,4 @@ h2 {
 }
 ul {
 	list-style-type: circle;
-}
-.closer {
-	width: 30px;
-	float: right;
-}
-.headIcon {
-	width: 30px;
-	float: left;
-}
-.windowMain {
-	padding: 5px;
-	overflow-y: scroll;
-	height: 250px;
-}
-.windowMain img {
-	background-color: rgba(240,240,240,0.7);
-	width: 75px;
-}
-.windowFooter {
-	display: inline;
-	padding-left: 10px;
-	font-size: 12px;
-}
-.windowFooter p {
-	display: inline;
-	padding: 5px;
-}
-.windowFooter img {
-	display: inline;
-}
-.hide {
-	display: none;
 }
